--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   getwidget: ^4.0.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,8 +63,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/avatar.png
-    - assets/bg.png
-    - assets/map_ic.png
     - assets/
+    - assets/gambar/
 
