--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_animations: ^1.1.1
   getwidget: ^4.0.0
+  http: ^1.1.0
 
 
 dev_dependencies:
