--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   getwidget: ^4.0.0
   http: ^1.1.0
-
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
